Header creation and background setting

--- a/main.html
+++ b/main.html
@@ -1,4 +1,21 @@
-<p>eu mamo livros
-    e fumo uma djamba
-</p>
-<p style="text-align: right; font-size: 30pt;"> luís fernando</p>
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>Tourão do Norte</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+</head>
+
+<!-- Se alguém está lendo isso, peço perdão pelos arquivos todos bagunçados e pelo código bem ruinzinho. Fiz isso em uma noite, e será apenas para o luís poder ler o blog.-->
+
+<body>
+    <header>
+        <div id="headerLogo">
+            <img id="logoImage" src="logo.png" style="margin-left: 3%;">
+            
+        </div>
+        <div id="headerTitle">
+            <p style="margin: 0; margin-right: 9%; margin-top: 1%;">Tourão Leitor</p>
+        </div>
+    </header>
+</body>
