Initial text and image placements

--- a/main.html
+++ b/main.html
@@ -12,10 +12,34 @@
     <header>
         <div id="headerLogo">
             <img id="logoImage" src="logo.png" style="margin-left: 3%;">
-            
+
         </div>
         <div id="headerTitle">
             <p style="margin: 0; margin-right: 9%; margin-top: 1%;">Tourão Leitor</p>
         </div>
     </header>
+
+    <main>
+        <section id="mainSection">
+            <article id="mainText">
+                <p>
+                    “Não verás país nenhum”, de Ignácio de Loyota Brandão, é um romance distópico que conta a história de Souza, protagonista que narra a própria história. O enredo se passa em um cenário “futurista” do Brasil em que um regime autoritário tomou proporções gigantescas e controla todos os aspectos da vida e liberdade dos indivíduos.
+                </p>
+                <p>
+                    Souza, que era um professor de história, hoje trabalha em um escritório e descreve sua rotina repetitiva no livro. Ele acorda cedo todos os dias para pegar um ônibus ao seu trabalho, passa o dia lá, fazendo um trabalho repetitivo que ele diz parecer inútil, para então retornar à casa, ter os mesmos rituais de anos com sua esposa Adeleide, e então dormir para recomeçar o dia seguinte. 
+                </p>
+                <p>
+                    Os detalhes sobre como o regime funciona e o funcionamento do país no momento se dá inicialmente através da observação de seu cotidiano. Ele explica, por exemplo, que a circulação dos cidadãos é muito limitada: cada pessoa tem acesso a apenas um distrito e adquirir acesso a outros é muito difícil e burocrático. Além disso, as tropas comuns da rua do Estado, chamados de “Civiltares”, controlam os cidadãos através do medo e repressão, e são muito bem treinados para neutralizar criminosos rapidamente e com eficiência, quase como robôs. Além deles, a outra tropa de elite do Estado são os “Militecnicos”, que tem uma maior formação acadêmica, são educados para saber a história e política defendida pelo estado, além de serem especializados na parte de tecnologia.
+                </p>
+                <p>
+                    Além desses, alguns outros detalhes sobre a sociedade brasileira do livro se mostram muito restritivos: a reutilização da água de mictórios para consumo, a necessidade de fichas de alimentação e água para conseguir recursos básicos, a limitação do desenvolvimento de ciência – como explicado por Silva no trecho em que ele conta sobre o fechamento da universidade em que trabalhava – dentre outras coisas.
+                </p>
+            </article>
+            
+            <article id="mainImage">
+                <img id="bookImage" src="book.jpg">
+            </article>
+        </section>
+    </main>
+
 </body>
