Clean code and readme completition

--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
 </head>
 
-<!-- Se alguém está lendo isso, peço perdão pelos arquivos todos bagunçados e pelo código bem ruinzinho. Fiz isso em uma noite, e será apenas para o luís poder ler o blog.-->
+<!-- If there is someone reading this, please, understand that the poor quality of the site and the code are due to the fact that I did this in one night.-->
 
 <body>
     <header>
